@@ -964,6 +964,19 @@ directly on IRC.
 Raised when a user changes the topic of a channel we are joined to. If
 the topic was cleared/removed, the `topic` parameter will be `null`.
 
+==== ChannelAway
+* Type: IrcEvent, TargetedEvent, SourcedEvent
+* Properties:
+** `user`: `User` - the user whose away state has changed
+** `target`: `String` - the channel that the user is in
+** `message`: `String?` - the away message, or `null` if the user is back
+
+After a <<UserAway>> event, KtIrc will "fan out" the event to all of the
+channels that we share with the user and raise a `ChannelAway`
+event for each channel. This is designed to make implementing certain features
+easier; if you fully handle a UserAway event there is no need to also
+handle the ChannelAway events, and vice-versa.
+
 === Channel/User events
 
 TODO
@@ -987,6 +1000,20 @@ TODO
 ==== CtcpReplyReceived
 
 TODO
+
+==== UserAway
+* Type: IrcEvent, SourcedEvent
+* Properties:
+** `user`: `User` - the user who has changed their away state
+** `message`: `String?` - the away message, or `null` if the user is back
+
+Raised when we are informed that a user has changed away states. If the server
+supports the `away-notify` capability we will receive notifications for all
+users in our common channels; otherwise, we will only receive notifications
+for our own user.
+
+If the user is away but we don't know the reason for it, the `message`
+property will be empty.
 
 ==== UserQuit
 
@@ -1136,171 +1163,171 @@ The following table shows KtIrc's IRCv3 support as of this release:
 3+h| Capability negotiation
 
 | https://ircv3.net/specs/core/capability-negotiation.html[CAP]
-| {set:cellbgcolor:green} Supported
+| {set:cellbgcolor:#a7eeaa} Supported
 | {set:cellbgcolor!}
 See <<Supported capabilities>> for the caps KtIrc will negotiate
 
 | https://ircv3.net/specs/core/capability-negotiation.html#cap-ls-version[CAP 302]
-| {set:cellbgcolor:green} Supported
+| {set:cellbgcolor:#a7eeaa} Supported
 | {set:cellbgcolor!}
 See <<Supported capabilities>> for the caps KtIrc will negotiate
 
 | https://ircv3.net/specs/core/capability-negotiation.html#cap-notify[cap-notify]
-| {set:cellbgcolor:red} Not yet supported
+| {set:cellbgcolor:#f7d5d3} No support
 | {set:cellbgcolor!}
 
 3+h| Published specifications
 
 | https://ircv3.net/specs/extensions/account-notify-3.1.html[account-notify] v3.1
-| {set:cellbgcolor:green} Supported
+| {set:cellbgcolor:#a7eeaa} Supported
 | {set:cellbgcolor!}
 See <<UserAccountChanged>>
 
 | https://ircv3.net/specs/extensions/account-tag-3.2.html[account-tag] v3.2
-| {set:cellbgcolor:green} Supported
+| {set:cellbgcolor:#a7eeaa} Supported
 | {set:cellbgcolor!}
 Accounts are automatically added to `User` properties in events
 
 | https://ircv3.net/specs/extensions/away-notify-3.1.html[away-notify] v3.1
-| {set:cellbgcolor:orange} Partial support
+| {set:cellbgcolor:#eeeeaa} Partial support
 | {set:cellbgcolor!}
-Negotiated but not yet exposed as an event
+See <<UserAway>>. State not yet tracked.
 
 | https://ircv3.net/specs/extensions/batch-3.2.html[batch] v3.2
-| {set:cellbgcolor:green} Supported
+| {set:cellbgcolor:#a7eeaa} Supported
 | {set:cellbgcolor!}
 See <<BatchReceived>>
 
 | https://ircv3.net/specs/extensions/chghost-3.2.html[chghost] v3.2
-| {set:cellbgcolor:green} Supported
+| {set:cellbgcolor:#a7eeaa} Supported
 | {set:cellbgcolor!}
 See <<UserHostChanged>>
 
 | https://ircv3.net/specs/extensions/echo-message-3.2.html[echo-message] v3.2
-| {set:cellbgcolor:green} Supported
+| {set:cellbgcolor:#a7eeaa} Supported
 | {set:cellbgcolor!}
 See also the `alwaysEchoMessages` <<Behaviour>>
 
 | https://ircv3.net/specs/extensions/extended-join-3.1.html[extended-join] v3.1
-| {set:cellbgcolor:green} Supported
+| {set:cellbgcolor:#a7eeaa} Supported
 | {set:cellbgcolor!}
 Additional details are automatically added to `User` properties in events
 
 | https://ircv3.net/specs/extensions/invite-notify-3.2.html[invite-notify] v3.2
-| {set:cellbgcolor:red} Not yet supported
+| {set:cellbgcolor:#f7d5d3} No support
 | {set:cellbgcolor!}
 
 | https://ircv3.net/specs/extensions/message-tags.html[message-tags]
-| {set:cellbgcolor:green} Supported
+| {set:cellbgcolor:#a7eeaa} Supported
 | {set:cellbgcolor!}
 Exposed in the metadata property of <<Events>>
 
 | https://ircv3.net/specs/core/monitor-3.2.html[monitor]
-| {set:cellbgcolor:red} Not yet supported
+| {set:cellbgcolor:#f7d5d3} No support
 | {set:cellbgcolor!}
 
 | https://ircv3.net/specs/extensions/multi-prefix-3.1.html[multi-prefix] v3.1
-| {set:cellbgcolor:green} Supported
+| {set:cellbgcolor:#a7eeaa} Supported
 | {set:cellbgcolor!}
 Automatically included in <<ChannelState>>
 
 | https://ircv3.net/specs/extensions/sasl-3.1.html[SASL] v3.1
-| {set:cellbgcolor:green} Supported
+| {set:cellbgcolor:#a7eeaa} Supported
 | {set:cellbgcolor!}
 See <<SASL configuration>>
 
 | https://ircv3.net/specs/extensions/sasl-3.2.html[SASL] v3.2
-| {set:cellbgcolor:orange} Partial support
+| {set:cellbgcolor:#eeeeaa} Partial support
 | {set:cellbgcolor!}
 Notifications via `cap-notify` not yet supported. See <<SASL configuration>>
 
 | https://ircv3.net/specs/extensions/server-time-3.2.html[server-time] v3.2
-| {set:cellbgcolor:green} Supported
+| {set:cellbgcolor:#a7eeaa} Supported
 | {set:cellbgcolor!}
 Exposed in the metadata property of <<Events>>
 
 | https://ircv3.net/specs/extensions/sts.html[sts]
-| {set:cellbgcolor:red} Not yet supported
+| {set:cellbgcolor:#f7d5d3} No support
 | {set:cellbgcolor!}
 
 | https://ircv3.net/specs/extensions/userhost-in-names-3.2.html[userhost-in-names] v3.2
-| {set:cellbgcolor:green} Supported
+| {set:cellbgcolor:#a7eeaa} Supported
 | {set:cellbgcolor!}
 Automatically included in <<UserState>>
 
 | https://ircv3.net/specs/extensions/webirc.html[webirc]
-| {set:cellbgcolor:red} Not yet supported
+| {set:cellbgcolor:#f7d5d3} No support
 | {set:cellbgcolor!}
 
 3+h| Draft specifications
 
 | https://github.com/ircv3/ircv3-specifications/pull/363[brb]
-| {set:cellbgcolor:red} Not yet supported
+| {set:cellbgcolor:#f7d5d3} No support
 | {set:cellbgcolor!}
 
 | https://github.com/ircv3/ircv3-specifications/pull/308[channel renaming]
-| {set:cellbgcolor:red} Not yet supported
+| {set:cellbgcolor:#f7d5d3} No support
 | {set:cellbgcolor!}
 
 | https://github.com/ircv3/ircv3-specifications/pull/349[chathistory]
-| {set:cellbgcolor:red} Not yet supported
+| {set:cellbgcolor:#f7d5d3} No support
 | {set:cellbgcolor!}
 
 | https://github.com/ircv3/ircv3-specifications/pull/346[delivered]
-| {set:cellbgcolor:red} Not yet supported
+| {set:cellbgcolor:#f7d5d3} No support
 | {set:cellbgcolor!}
 
 | https://github.com/ircv3/ircv3-specifications/pull/304[editmsg]
-| {set:cellbgcolor:red} Not yet supported
+| {set:cellbgcolor:#f7d5d3} No support
 | {set:cellbgcolor!}
 
 | https://ircv3.net/specs/extensions/labeled-response.html[labeled-response]
-| {set:cellbgcolor:green} Supported
+| {set:cellbgcolor:#a7eeaa} Supported
 | {set:cellbgcolor!}
 Exposed in the metadata property of <<Events>>
 
 | https://ircv3.net/specs/extensions/message-ids.html[message-ids]
-| {set:cellbgcolor:red} Not yet supported
+| {set:cellbgcolor:#f7d5d3} No support
 | {set:cellbgcolor!}
 
 | https://github.com/ircv3/ircv3-specifications/pull/330[migrate]
-| {set:cellbgcolor:red} Not yet supported
+| {set:cellbgcolor:#f7d5d3} No support
 | {set:cellbgcolor!}
 
 | https://ircv3.net/specs/client-tags/react.html[react]
-| {set:cellbgcolor:orange} Partial support
+| {set:cellbgcolor:#eeeeaa} Partial support
 | {set:cellbgcolor!}
 Sending via <<React>> method, no events generated
 
 | https://github.com/ircv3/ircv3-specifications/pull/347[read]
-| {set:cellbgcolor:red} Not yet supported
+| {set:cellbgcolor:#f7d5d3} No support
 | {set:cellbgcolor!}
 
 | https://github.com/ircv3/ircv3-specifications/pull/276[register]
-| {set:cellbgcolor:red} Not yet supported
+| {set:cellbgcolor:#f7d5d3} No support
 | {set:cellbgcolor!}
 
 | https://ircv3.net/specs/client-tags/reply.html[reply]
-| {set:cellbgcolor:orange} Partial support
+| {set:cellbgcolor:#eeeeaa} Partial support
 | {set:cellbgcolor!}
 Sending via <<Reply>> method, not processed on incoming messages
 
 | https://github.com/ircv3/ircv3-specifications/pull/306[resume]
-| {set:cellbgcolor:red} Not yet supported
+| {set:cellbgcolor:#f7d5d3} No support
 | {set:cellbgcolor!}
 
 | https://github.com/ircv3/ircv3-specifications/pull/361[setname]
-| {set:cellbgcolor:red} Not yet supported
+| {set:cellbgcolor:#f7d5d3} No support
 | {set:cellbgcolor!}
 
 | https://github.com/ircv3/ircv3-specifications/pull/357[standard replies]
-| {set:cellbgcolor:red} Not yet supported
+| {set:cellbgcolor:#f7d5d3} No support
 | {set:cellbgcolor!}
 
 | https://github.com/ircv3/ircv3-specifications/pull/348[typing]
-| {set:cellbgcolor:red} Not yet supported
+| {set:cellbgcolor:#f7d5d3} No support
 | {set:cellbgcolor!}
 
-3+^h|Vendor specifications
+3+h|Vendor specifications
 
 |===
